--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
   <ul class="img-list">
     
         <li>
-          <a href="/blogging-lesson-7/">
-            <img src="https://images8.alphacoders.com/545/545905.jpg">
+          <a href="/copy-of-using-github/">
+            <img src="https://i2.wp.com/static.trustedreviews.com/94/0000362d5/a821/Vault-Boy.jpg?w=1000">
             <span class="text-content"><span>Week 7 Fixing my website</span></span>
           </a>
         </li>
